--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,15 @@
   font-family: "antonio", sans-serif;
   font-size: 16px;
 }
+
+.texture::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('https://img.freepik.com/free-photo/whitish-gray-textured-wallpaper-pattern_1194-6769.jpg?t=st=1733550825~exp=1733554425~hmac=3c514325a2380dc74e59c877f0639fcc27fee7025dacf3c1d0a71b41a8e3100e&w=900');
+  opacity: 0.1;
+  z-index: -1;
+}
